update quiz